Roles Y cascaron para Revisor y Aprobador

--- a/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
+++ b/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
@@ -35,8 +35,8 @@
                 </li>
             }
         </ul>
-        <input type="submit" value="Add Role" />
-        <input type="hidden" asp-for="Delete" value="false" id="delete" />
-        <input type="submit" value="Delete Role" onclick="document.getElementById('delete').value = 'true'" />
+        <input type="submit" class="btn btn-primary"  value="Agregar Role" />
+        <input type="hidden" class="btn btn-primary" asp-for="Delete" value="false" id="Eliminar" />
+        <input type="submit" class="btn btn-primary"  value="Eliminar Role" onclick="document.getElementById('delete').value = 'true'" />
     </form>
 </div>
