--- a/TravelExpenses/Views/Roles/_CreateRole.cshtml
+++ b/TravelExpenses/Views/Roles/_CreateRole.cshtml
@@ -4,8 +4,9 @@
 
 <div>
     <form asp-controller="Roles" asp-action="CreateRole" method="post">
-        <label>Create new Role</label>
+        <label>Crear nuevo Role</label>
         <input asp-for="Name" />
-        <input type="submit" value="Create" />
+        <br />
+        <input class="btn btn-primary"  type="submit" value="Crear Role" />
     </form>
 </div>
