--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -138,7 +138,7 @@
                     $.each(args[1], function (index, item) {
 
                         console.log(item);
-                        row += "<tr><td>" + item.uuid + "</td><td>" + item.folio + "</td><td>" + item.fecha + "</td><td>" + item.rfc + "</td><td>" + item.nombreProveedor + "</td><td>" + item.moneda + "</td><td>" + item.subTotal + "</td><td>" + item.impuestos + "</td><td>" + item.total + "</td><td><a class='btn btn - lg' href='/Rembolso/Details?UUID=" + item.uuid + "><i class='mdi mdi-magnify-plus'></i></a></td><td><a class='btn btn - lg'><i class='fas fa-eraser'></i></a></td></tr>";
+                        row += "<tr><td>" + item.uuid + "</td><td>" + item.folio + "</td><td>" + item.fecha + "</td><td>" + item.rfc + "</td><td>" + item.nombreProveedor + "</td><td>" + item.moneda + "</td><td>" + item.subTotal + "</td><td>" + item.impuestos + "</td><td>" + item.total + "</td><td><a class='btn btn - lg' href='/Rembolso/Details?UUID=" + item.uuid + "'><i class='fas fa-info-circle'></i></a></td><td><a class='btn btn - lg'><i class='fas fa-eraser'></i></a></td></tr>";
                     });
                     $("#tblComprobantes").html(row);  
                 }
