--- a/TravelExpenses/Views/Rembolso/Details.cshtml
+++ b/TravelExpenses/Views/Rembolso/Details.cshtml
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="float:right">
                             <input type="submit" value="Guardar" class="btn btn-primary" />
                         </div>
                     </div>
