Correccion de Correo al registrar usuario generacion de token

--- a/TravelExpenses/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "Confirmacion de Correo";
 }
 
 <h1>@ViewData["Title"]</h1>
 <div>
     <p>
-        Thank you for confirming your email.
+        Gracias por confirmar su correo.
     </p>
 </div>
