--- a/TravelExpenses/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Cierre de Sesion";
+    ViewData["Title"] = "Cierre de Sesión";
 }
 
 <header>
