--- a/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
+++ b/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
@@ -3,9 +3,9 @@
 @{
 }
 
-<div>
+<div >
     <form asp-controller="Roles" asp-action="UpdateUserRole" method="post">
-        <h2>Add User to Role</h2>
+        <h2>Agregar Roles a usuario</h2>
         <ul>
             @foreach (var user in Model.Users)
             {
@@ -25,7 +25,7 @@
                 </li>
             }
         </ul>
-        <h4>Roles to add</h4>
+        <h4>Roles a agregar</h4>
         <ul>
             @foreach (var role in Model.Roles)
             {
