--- a/TravelExpenses/Views/Rembolso/Details.cshtml
+++ b/TravelExpenses/Views/Rembolso/Details.cshtml
@@ -2,12 +2,11 @@
 
 <h1>Detalles del Comprobante</h1>
 
-<div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <form method="post">
+<form method="post"  asp-action="Details" role="form">
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
                 <div class="form-group">
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -61,73 +60,83 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-
-            </form>
-        </div>
-
-        <div class="card-body">
-            <div class="table-responsive">
-                <table id="data-table-basic" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>
-                                IdConcepto
-                            </th>                           
-                            <th>
-                                Importe
-                            </th>
-                            <th>
-                                Valor Unitario
-                            </th>
-                            <th>
-                                Descripción
-                            </th>
-                            <th>
-                                Unidad
-                            </th>
-                            <th>
-                                ClaveUnidad
-                            </th>
-                            <th>
-                                Cantidad
-                            </th>
-                            <th>
-                                No Identificación
-                            </th>
-                            <th>
-                                Detalles
-                            </th>
-                            <th>
-                                Eliminar
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody id="tblComprobantes">
-                        if (@Model.Comprobante.Conceptos != null  && @Model.Comprobante.Conceptos.Count > 0)
-                        {
-                        @foreach (var concepto in Model.Comprobante.Conceptos)
-                        {
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="data-table-basic" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Descripción
+                                </th>
+                                <th>
+                                    Descripción SAT
+                                </th>
+                                <th>
+                                    Importe
+                                </th>
+                                <th>
+                                    Valor Unitario
+                                </th>
+                                <th>
+                                    Unidad
+                                </th>
+                                <th>
+                                    Clave SAT
+                                </th>
+                                <th>
+                                    Gasto
+                                </th>
+                                <th>
+                                    Eliminar
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody id="tblComprobantes">
+                            @if (Model.Comprobante.Conceptos != null && @Model.Comprobante.Conceptos.Count > 0)
+                            {
+                                for (int i=0;i < Model.Comprobante.Conceptos.Count();i++)
+                                {
 
                             <tr>
-                                <td>@concepto.IdConcepto</td>
-                                <td>@concepto.Importe</td>
-                                <td>@concepto.ValorUnitario</td>
-                                <td>@concepto.Descripcion</td>
-                                <td>@concepto.Unidad</td>
-                                <td>@concepto.ClaveUnidad</td>
-                                <td>@concepto.Cantidad</td>
-                                <td>@concepto.NoIdentificacion</td>
-                                <td></td>
+                                <td>
+                                    <input asp-for="@Model.Comprobante.Conceptos[i].Descripcion" id="Descripcion" class="control-label" readonly="readonly" />                                    
+                                </td>
+                                <td>
+                                    <input asp-for="@Model.Comprobante.Conceptos[i].DescripcionProdServ" id="DescripcionProdServ" class="control-label" readonly="readonly" />                                    
+                                </td>
+                                <td>
+                                    <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].IdConcepto" />
+                                    <label class="alert-danger">@Model.Comprobante.Conceptos[i].MensajeError</label>
+                                    <input asp-for="@Model.Comprobante.Conceptos[i].Importe" id="Importe" class="control-label" readonly="readonly"/>
+                                </td>
+                                <td>
+                                    <input asp-for="@Model.Comprobante.Conceptos[i].ValorUnitario" id="ValorUnitario" class="control-label" readonly="readonly"/>
+                                </td>
+                                <td>
+                                    <input asp-for="@Model.Comprobante.Conceptos[i].Unidad" id="Unidad" class="control-label" readonly="readonly" />                                    
+                                </td>
+                                <td>
+                                    <input asp-for="@Model.Comprobante.Conceptos[i].Cantidad" id="Cantidad" class="control-label" readonly="readonly" />                                    
+                                </td>
+                                <td>
+                                    <select asp-for="@Model.Comprobante.Conceptos[i].IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
+                                            asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))">
+                                        <option value="">--Seleccione un Gasto</option>
+                                    </select>
+                                </td>
                                 <td></td>
                             </tr>
-                        }
-                        }
-                    </tbody>
-                </table>
+                                }
+                            }
+                        </tbody>
+                    </table>
+
+                </div>
 
             </div>
         </div>
-    </div>
 
-</div>
+    </div>
+</form>
