--- a/TravelExpenses/Views/Rembolso/Details.cshtml
+++ b/TravelExpenses/Views/Rembolso/Details.cshtml
@@ -53,90 +53,149 @@
                             <input asp-for=@Model.Comprobante.Total class="form-control" placeholder="Total" />
                             <span asp-validation-for=@Model.Comprobante.Total class="text-danger"></span>
                         </div>
+                    </div>                    
+                </div>
+            </div>
+
+            @if (!Model.Comprobante.ComprobanteXML)
+            {
+            <div class="card-body" id="divConceptos">
+                <h2>Capturar Conceptos</h2>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                            <label class="control-label">Descripcion</label>
+                            <input asp-for=@Model.Concepto.Descripcion class="form-control" placeholder="Descripción" />
+                            <span asp-validation-for=@Model.Concepto.Descripcion class="text-danger"></span>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                            <label class="control-label">Importe</label>
+                            <input asp-for=@Model.Concepto.Importe class="form-control" placeholder="Importe" />
+                            <span asp-validation-for=@Model.Concepto.Importe class="text-danger"></span>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                            <label class="control-label">Valor Unitario</label>
+                            <input asp-for=@Model.Concepto.ValorUnitario class="form-control" placeholder="Valor Unitario" />
+                            <span asp-validation-for=@Model.Concepto.ValorUnitario class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="float:right">
-                            <input type="submit" value="Guardar" class="btn btn-primary" />
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                            <label class="control-label">Cantidad</label>
+                            <input asp-for=@Model.Concepto.Cantidad class="form-control" placeholder="Cantidad" />
+                            <span asp-validation-for=@Model.Concepto.Cantidad class="text-danger"></span>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                            <label class="control-label">Unidad</label>
+                            <input asp-for=@Model.Concepto.Unidad class="form-control" placeholder="Unidad" />
+                            <span asp-validation-for=@Model.Concepto.Unidad class="text-danger"></span>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                            <label class="control-label">Clave Unidad</label>
+                            <input asp-for=@Model.Concepto.ClaveUnidad class="form-control" placeholder="Clave Unidad" />
+                            <span asp-validation-for=@Model.Concepto.ClaveUnidad class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <label class="control-label">Clave Gasto</label>
+                            <select asp-for="@Model.Concepto.IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
+                                    asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))">
+                                <option value="">--Seleccione un Gasto</option>
+                            </select>
+                            <span asp-validation-for=@Model.Concepto.IdGasto class="text-danger"></span>
                         </div>
                     </div>
                 </div>
             </div>
 
+            }
+
             <div class="card-body">
-                <div class="table-responsive">
-                    <table id="data-table-basic" class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>
-                                    Descripción
-                                </th>
-                                <th>
-                                    Descripción SAT
-                                </th>
-                                <th>
-                                    Importe
-                                </th>
-                                <th>
-                                    Valor Unitario
-                                </th>
-                                <th>
-                                    Unidad
-                                </th>
-                                <th>
-                                    Clave SAT
-                                </th>
-                                <th>
-                                    Gasto
-                                </th>
-                                <th>
-                                    Eliminar
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody id="tblComprobantes">
-                            @if (Model.Comprobante.Conceptos != null && @Model.Comprobante.Conceptos.Count > 0)
-                            {
-                                for (int i=0;i < Model.Comprobante.Conceptos.Count();i++)
-                                {
-
-                            <tr>
-                                <td>
-                                    <input asp-for="@Model.Comprobante.Conceptos[i].Descripcion" id="Descripcion" class="control-label" readonly="readonly" />                                    
-                                </td>
-                                <td>
-                                    <input asp-for="@Model.Comprobante.Conceptos[i].DescripcionProdServ" id="DescripcionProdServ" class="control-label" readonly="readonly" />                                    
-                                </td>
-                                <td>
-                                    <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].IdConcepto" />
-                                    <label class="alert-danger">@Model.Comprobante.Conceptos[i].MensajeError</label>
-                                    <input asp-for="@Model.Comprobante.Conceptos[i].Importe" id="Importe" class="control-label" readonly="readonly"/>
-                                </td>
-                                <td>
-                                    <input asp-for="@Model.Comprobante.Conceptos[i].ValorUnitario" id="ValorUnitario" class="control-label" readonly="readonly"/>
-                                </td>
-                                <td>
-                                    <input asp-for="@Model.Comprobante.Conceptos[i].Unidad" id="Unidad" class="control-label" readonly="readonly" />                                    
-                                </td>
-                                <td>
-                                    <input asp-for="@Model.Comprobante.Conceptos[i].Cantidad" id="Cantidad" class="control-label" readonly="readonly" />                                    
-                                </td>
-                                <td>
-                                    <select asp-for="@Model.Comprobante.Conceptos[i].IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
-                                            asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))">
-                                        <option value="">--Seleccione un Gasto</option>
-                                    </select>
-                                </td>
-                                <td></td>
-                            </tr>
-                                }
-                            }
-                        </tbody>
-                    </table>
-
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="float:right">
+                            <input type="submit" value="Guardar" class="btn btn-primary" />
+                        </div>
+                    </div>
+                    </div>
                 </div>
 
-            </div>
-        </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table id="data-table-basic" class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Descripción
+                                    </th>
+                                    <th>
+                                        Descripción SAT
+                                    </th>
+                                    <th>
+                                        Importe
+                                    </th>
+                                    <th>
+                                        Valor Unitario
+                                    </th>
+                                    <th>
+                                        Unidad
+                                    </th>
+                                    <th>
+                                        Cantidad
+                                    </th>
+                                    <th>
+                                        Gasto
+                                    </th>
+                                    <th>
+                                        Eliminar
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody id="tblComprobantes">
+                                @if (Model.Comprobante.Conceptos != null && @Model.Comprobante.Conceptos.Count > 0)
+                                {
+                                    for (int i = 0; i < Model.Comprobante.Conceptos.Count(); i++)
+                                    {
 
-    </div>
+                                        <tr>
+                                            <td>
+                                                <input asp-for="@Model.Comprobante.Conceptos[i].Descripcion" id="Descripcion" class="control-label" readonly="readonly" />
+                                            </td>
+                                            <td>
+                                                <input asp-for="@Model.Comprobante.Conceptos[i].DescripcionProdServ" id="DescripcionProdServ" class="control-label" readonly="readonly" />
+                                            </td>
+                                            <td>
+                                                <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].IdConcepto" />
+                                                <label class="alert-danger">@Model.Comprobante.Conceptos[i].MensajeError</label>
+                                                <input asp-for="@Model.Comprobante.Conceptos[i].Importe" id="Importe" class="control-label" readonly="readonly" />
+                                            </td>
+                                            <td>
+                                                <input asp-for="@Model.Comprobante.Conceptos[i].ValorUnitario" id="ValorUnitario" class="control-label" readonly="readonly" />
+                                            </td>
+                                            <td>
+                                                <input asp-for="@Model.Comprobante.Conceptos[i].Unidad" id="Unidad" class="control-label" readonly="readonly" />
+                                            </td>
+                                            <td>
+                                                <input asp-for="@Model.Comprobante.Conceptos[i].Cantidad" id="Cantidad" class="control-label" readonly="readonly" />
+                                            </td>
+                                            <td>
+                                                <select asp-for="@Model.Comprobante.Conceptos[i].IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
+                                                        asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))">
+                                                    <option value="">--Seleccione un Gasto</option>
+                                                </select>
+                                            </td>
+                                            <td></td>
+                                        </tr>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
 </form>
