--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -2,32 +2,42 @@
 <link rel="stylesheet" href="~/vendors/dropzone/dropzone.css">
 
 <h1>Rembolso</h1>
-<input type="hidden" asp-for="@Model.Comprobante.Folio" />
+
 <div class="dropzone-area">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <label class="control-label">Folio Solicitud: @Model.solicitud.Folio</label>
+                    <label class="control-label">Departamento: @Model.solicitud.Departamento</label>
+                    <label class="control-label">Importe Solicitado: @Model.solicitud.ImporteSolicitado</label>
+                </div>                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="dropdone-nk mg-t-30">
-                    <div class="cmp-tb-hd">
-                        <h2>Arrastre y suelte los documentos</h2>
-                        <p>Solo puede subir archivos XML, PDF o imagénes.</p>
-                    </div>
-                    <div id="dropzone1" class="multi-uploader-cs">
-                        <form action="/Rembolso/FileUpload" class="dropzone dropzone-nk needsclick" id="UploadFiles">
-                            <div class="dz-message needsclick download-custom">
-                                <i class="alert-info"></i>
-                                <h2>Suelte los archivos a subir o de clic y agreguelos</h2>
-                                <p>
-                                    <span class="note needsclick">(Los archivos se guardan <strong>automaticamente</strong>)</span>
-                                </p>
-                            </div>
+                        <div class="cmp-tb-hd">
+                            <h2>Arrastre y suelte los documentos</h2>
+                            <p>Solo puede subir archivos XML, PDF o imagénes.</p>
+                        </div>
+                        <div id="dropzone1" class="multi-uploader-cs">
+                            <form action="/Rembolso/FileUpload" class="dropzone dropzone-nk needsclick" id="UploadFiles">
+                                <input type="hidden" asp-for="@Model.solicitud.Folio" />
+                                <div class="dz-message needsclick download-custom">
+                                    <i class="alert-info"></i>
+                                    <h2>Suelte los archivos a subir o de clic y agreguelos</h2>
+                                    <p>
+                                        <span class="note needsclick">(Los archivos se guardan <strong>automaticamente</strong>)</span>
+                                    </p>
+                                </div>
 
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 </div>
 
 <h1>Comprobantes</h1>
