--- a/TravelExpenses/Views/Rembolso/Details.cshtml
+++ b/TravelExpenses/Views/Rembolso/Details.cshtml
@@ -10,6 +10,7 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                            <input type="hidden" asp-for="@Model.Comprobante.FolioSolicitud" />
                             <label class="control-label">UUID</label>
                             <input asp-for=@Model.Comprobante.UUID class="form-control" placeholder="UUID" />
                             <span asp-validation-for=@Model.Comprobante.UUID class="text-danger"></span>
@@ -114,8 +115,11 @@
             <div class="card-body">
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="float:right">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="float:right">
                             <input type="submit" value="Guardar" class="btn btn-primary" />
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="float:right">
+                            <button asp-controller="Rembolso" asp-action="EnviarReembolso">Solicitar Autorización</button>
                         </div>
                     </div>
                     </div>
@@ -160,9 +164,13 @@
 
                                         <tr>
                                             <td>
+                                                <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].IdConcepto" />
+                                                <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].NoIdentificacion" />
+                                                
                                                 <input asp-for="@Model.Comprobante.Conceptos[i].Descripcion" id="Descripcion" class="control-label" readonly="readonly" />
                                             </td>
                                             <td>
+                                                <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].ClaveProdServ" />
                                                 <input asp-for="@Model.Comprobante.Conceptos[i].DescripcionProdServ" id="DescripcionProdServ" class="control-label" readonly="readonly" />
                                             </td>
                                             <td>
@@ -174,6 +182,7 @@
                                                 <input asp-for="@Model.Comprobante.Conceptos[i].ValorUnitario" id="ValorUnitario" class="control-label" readonly="readonly" />
                                             </td>
                                             <td>
+                                                <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].ClaveUnidad" />
                                                 <input asp-for="@Model.Comprobante.Conceptos[i].Unidad" id="Unidad" class="control-label" readonly="readonly" />
                                             </td>
                                             <td>
